--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -1,15 +1,35 @@
-<%= form_tag package_items_path(item: old_item_id), method: :post, remote: true do |i| %>
-  <%#= number_field_tag "min_price", 0, min: 0 %>
-  <%# if max == 99999999999999 %>
-    <%#= number_field_tag "max_price", min: 0 %>
-  <%# else %>
-    <%#= number_field_tag "max_price", max ? max / 100 : nil, min: 0 %>
-  <%# end %>
-  <strong id="index-min">$10</strong><input id="ex2" type="text" class="span2" name="min_max" value="" data-slider-min="10" data-slider-max="500" data-slider-step="5" data-slider-value="[0,200]"/><strong id="index-max">$500</strong>
-  <%= hidden_field_tag "category", category %>
-  <%= hidden_field_tag "filter", "true" %>
-  <%= submit_tag %>
-<% end %>
+<div class="package-item-show-container">
+  <div class="back-button">
+    <%= link_to package_main_path, remote: true do %>
+      <i class="fa fa-close"></i>
+    <% end %>
+  </div>
+  <div class="package-index-form">
+    <%= form_tag package_items_path(item: old_item_id), method: :post, remote: true do |i| %>
+      <strong id="index-min">$10</strong><input id="ex2" type="text" class="span2" name="min_max" value="" data-slider-min="10" data-slider-max="500" data-slider-step="5" data-slider-value="[0,200]"/><strong id="index-max">$500</strong>
+      <%= hidden_field_tag "category", category %>
+      <%= hidden_field_tag "filter", "true" %>
+      <%= submit_tag %>
+    <% end %>
+  </div>
+
+  <div class="package-index-item">
+    <% @items.each do |i| %>
+      <% item_attr = {
+        old_item_id: @item,
+        new_item_id: i.id, # I.E., THIS ITEM!!!
+        item_type: Category.find(i.category_id).item_type,
+        brand: i.brand,
+        price: i.price,
+        size: i.size,
+        description: i.description
+      } %>
+      <% item_attr[:item_ids] = @item_ids %>
+      <%= render 'items/package_index_item', item_attr %>
+    <% end %>
+  </div>
+</div>
+
 
 <script>
   $("#ex2").slider({});
