--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -91,7 +91,7 @@
 .card-row{
 
   padding: 0 50px;
-
+  margin-top: 90px;
 
   // background-color: rgb(245, 245, 245);
   // box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
