--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -31,7 +31,7 @@
       <% end %>
     <% else %>
       <div class="no-items-match-your-search">
-        <h1>No Items Match Your Sear :(</h1>
+        <h1>No Items Match Your Search :(</h1>
       </div>
     <% end %>
   </div>
