--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -31,3 +31,8 @@ $cart-button: #57C1AD;
 $cart-button-hover: #48D2AD;
 
 $base-font: $our-font;
+
+
+// Form
+$input-border: #8A8888;
+$input-border-radius:0;
