no hand on size-select 'button'

--- a/app/assets/stylesheets/components/_packages.scss
+++ b/app/assets/stylesheets/components/_packages.scss
@@ -175,6 +175,7 @@
   background-color: lightgrey;
   border-radius: 7px;
   padding: 10px 40px;
+  cursor: auto;
   a {
     &:hover {
       text-decoration: none;
