navbar logo fix

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -32,7 +32,7 @@
 .nav-btn-white a{
   color: white;
     &:hover{
-    color: #e2e2e2;
+    color: white;
   }
 }
 
@@ -120,7 +120,7 @@
 }
 
 .navbar-wagon-brand:hover{
-  color: white !important;
+  // color: white !important;
   text-decoration: none;
 }
 
