--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,13 +6,13 @@
     <%#= form.input "max_price" %>
     <%#= form.submit "Find Your Package", package_path %>
     <%# end %>
-    <h1>Get Your Package!</h1>
+    <h1>The world's number one referee store</h1>
     <br>
 
     <%= simple_form_for :search,  url: package_path , :method => :get, html: {class: 'form-inline'} do |f| %>
 
-      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Max", label: false %>
+      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Max budget", label: false %>
       <%= f.input :new_package, as: :hidden, value: "true" %>
-      <%= f.submit "Submit", class: "btn base-button" %>
+      <%= f.submit "Get your package", class: "btn cart-button" %>
   <% end %>
 </div>
