cart page fixup

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,7 +33,7 @@
 
 
 .stripe-button-el span{
-  padding: 0 12px !important;
+  padding: 0px 35px !important;
   height: 30px !important;
   line-height: 30px !important;
   background: $cart-button !important;
