--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,10 +11,14 @@
   padding-top: 0px;
   background-image: linear-gradient(-225deg, rgba(42, 245, 152, 0.3) 0%, rgba(0, 0, 0, 0.35) 50%), image_url('banner-image.jpg');
 }
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+.home-banner {
+  h1 {
+    font-size: 100px;
+    font-weight: bold;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    margin: 0;
+  }
+  margin-bottom: 30px;
 }
 .banner p {
   font-size: 20px;
@@ -33,4 +37,18 @@
   align-items: center;
   justify-content: center;
 }
-// http://res.cloudinary.com/dw8keir6d/image/upload/v1492796417/banner-image_cknspd.jpg
+
+.banner-sub-header {
+  display: none;
+  max-width: 500px;
+  margin-bottom: 10px;
+  h2 {
+    margin: 0;
+  }
+}
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
