--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -56,6 +56,7 @@
   border-width: thin;
   border-radius: 30px;
   padding: 6px 30px;
+  margin: 10px 0;
   &:hover {
     color: grey;
     border-color: grey;
