--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,18 @@
 <div class="banner">
 
   <div class="banner-content">
-    <%# simple_form_for @items do |form| %>
-    <%#= form.input "min_price" %>
-    <%#= form.input "max_price" %>
-    <%#= form.submit "Find Your Package", package_path %>
-    <%# end %>
-    <h1>The world's number one referee store</h1>
-    <br>
+    <div class="home-banner">
+      <h1>The World's #1</h1>
+      <h1>Ref Store</h1>
+    </div>
+    <div class="banner-sub-header">
+      <h2>Enter Your Budget and We'll Give You a Package of Everything You Need</h2>
+    </div>
+
 
     <%= simple_form_for :search,  url: package_path , :method => :get, html: {class: 'form-inline'} do |f| %>
 
-      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Max budget", label: false %>
+      <%= f.input :price_upper, as: :integer, required: false, placeholder: "Enter Your budget", label: false %>
       <%= f.input :new_package, as: :hidden, value: "true" %>
       <%= f.submit "Get your package", class: "btn cart-button" %>
   <% end %>
