Added some new buttons color

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,7 +28,8 @@
   padding: 15px 20px;
   font-size: 20px;
   color: #333333;
-  background-color: #f7f7f7;
+  background-color: #D9D9D9;
+  // background-color: #f7f7f7;
   p {
     margin: 0;
   }
@@ -36,7 +37,7 @@
 
 .in-cart {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  background-color: $cart-button;
+  background-color: #00DAB8;
   color: #bef5ea;
 }
 
