--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -91,7 +91,7 @@
 
 .package-item-in-cart {
   color: white;
-  background-color: $cart-button;
+  background-color: #00DAB8;
 }
 
 .package-items {
