--- a/app/views/pages/_package_page.html.erb
+++ b/app/views/pages/_package_page.html.erb
@@ -12,7 +12,7 @@
             </div>
             <div class="card-lower">
               <% if current_user %>
-                <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.user_id = ?", current_user.id)[0] %>
+                <% order_item = OrderItem.joins(:order).where(item_id: item.id, package: true).where("orders.id = ?", current_user.orders.last.id)[0] %>
                 <% in_cart = order_item.cart %>
               <% else %>
                 <% session[:package_items].each { |j| in_cart = j["cart"] if j["item_id"] == item.id } %>
