--- a/app/views/orderitems/index.html.erb
+++ b/app/views/orderitems/index.html.erb
@@ -108,7 +108,7 @@
                   <%= label_tag "province", "Province" %>
                   <%= text_field_tag "province" %>
                   <%= label_tag "postal_code", "Postal Code" %>
-                  <%= text_field_tag "postal-code" %>
+                  <%= text_field_tag "postal_code" %>
                 </div>
               <script src="https://checkout.stripe.com/checkout.js" class="stripe-button cart-button"
               data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
